# autonomous-driving-project

./: .gitignore  README.md
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.yml  plan.yml
STM/CAN2.0B/: README.md
STM/CAN2.0B/can_protocol/can_protocol_stm32f411_mcp2515/: .mxproject  .project  can_protocol_stm32f411_mcp2515 (1).launch  can_protocol_stm32f411_mcp2515.launch  can_protocol_training2.launch
STM/CAN2.0B/can_protocol/can_protocol_stm32f446/: .project  can_protocol_stm32f446 Debug.launch  can_protocol_stm32f446.launch  can_protocol_training.launch
STM/Woojin5020/CAN2.0B_Only/: README.md
STM/Woojin5020/CAN2.0B_rock_stm_sensor/: README.md
STM/Woojin5020/CAN2.0B_rock_stm_sensor/RockChip_5B/: readme.txt  recv_can_tof_mpu  recv_can_tof_mpu.cpp
STM/abin1303/: README.md
STM/abin1303/mpu9250_test/: .mxproject  mpu9250_test.ioc
STM/abin1303/stm32_wifi_ros2_bridge_demo/: .cproject  .project  stm32_wifi_ros2_bridge_demo.ioc
STM/abin1303/traffic_light/: .cproject  .mxproject  .project  README.md  test.md  traffic_light.ioc
STM/mpu9250_test/: .cproject  .project  mpu9250_test Debug.launch
STM/mpu9250_test/Core/Src/: main.c
STM/mpu9250_test/Debug/: makefile  mpu9250_test.elf  mpu9250_test.list  mpu9250_test.map  objects.list
STM/stm32_wifi_ros2_bridge_demo/Core/Inc/: esp.h  stm32f4xx_it.h
STM/stm32_wifi_ros2_bridge_demo/Core/Src/: posix_time_shim.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM/temp/stm32_wifi_ros2_bridge_demo/stm32_wifi_ros2_bridge_demo/: stm32_wifi_ros2_bridge_demo Debug.launch  stm32_wifi_ros2_bridge_demo.ioc
STM/traffic_light/: .cproject  README.md  traffic_light Debug.launch  traffic_light.ioc
STM/traffic_light/Core/Inc/: esp.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
STM/traffic_light/Core/Src/: main.c  stm32f4xx_hal_msp.c
STM/traffic_light/Debug/: makefile  objects.list  traffic_light.elf  traffic_light.list  traffic_light.map
can_protocol/stm32f446_stm32f411(mcp_2515)/can_protocol_stm32f411_mcp2515/: .cproject  .mxproject  .project  can_protocol_stm32f411_mcp2515 (1).launch  can_protocol_stm32f411_mcp2515.ioc  can_protocol_stm32f411_mcp2515.launch  can_protocol_training2.launch
can_protocol/stm32f446_stm32f411(mcp_2515)/can_protocol_stm32f411_mcp2515/Debug/: can_protocol_stm32f411_mcp2515.elf  can_protocol_stm32f411_mcp2515.list  can_protocol_stm32f411_mcp2515.map  makefile  objects.list
can_protocol/stm32f446_stm32f411(mcp_2515)/can_protocol_stm32f446/: .cproject  .mxproject  .project  can_protocol_stm32f446 Debug.launch  can_protocol_stm32f446.ioc  can_protocol_stm32f446.launch  can_protocol_training.launch
can_protocol/stm32f446_stm32f411(mcp_2515)/can_protocol_stm32f446/Debug/: can_protocol_stm32f446.elf  can_protocol_stm32f446.list  can_protocol_stm32f446.map  makefile
cctv/: README.md  camera.py  infer.py  infer_orin.py
cctv/ai_model/: metadata.yaml
cctv/intel7_cam_sub/: package.xml  setup.cfg  setup.py
cctv/intel7_cam_sub/intel7_cam_sub/: subscriber_node.py
cctv/intel7_cam_sub/resource/: intel7_cam_sub
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ros2_client/lib/ros2_client/: traffic_light_client
install/ros2_client/share/ros2_client/: package.sh
iot_server/: README.md  idpasswd.txt  iot_server.c
log/: latest_build
qt/: README.md  unified_qt.pro
qt/src/: images.qrc  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  onvif_browser_widget.cpp  onvif_browser_widget.h  socketclient.cpp  socketclient.h
qt/traffic_light/: images.qrc  mainwidget.cpp  mainwidget.h  mainwidget.ui  socketclient.cpp  socketclient.h  traffic_light.pro
ros2_client/: README.md  setup.cfg  setup.py
ros2_client/install/: local_setup.sh  setup.sh
ros2_client/install/ros2_client/share/ros2_client/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_client/launch/: traffic_light_client.launch.py
ros2_client/log/: latest_build
sql_client/: Makefile  README.md  db.txt  iot_client_light.c
sql_client/temp/: iot_client_device.c  iot_client_mini  iot_client_mini.c
src/: README.md
src/ros2_ws_c/: compile_commands.json
src/ros2_ws_c/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
src/ros2_ws_c/log/: latest_build
src/ros2_ws_c/src/moving_service/: CMakeLists.txt
src/ros2_ws_c/src/moving_service/src/: circle_node.cpp  spin_node.cpp
src/ros2_ws_c/src/my_cpp_package/: CMakeLists.txt
src/ros2_ws_c/src/my_cpp_package/src/: fast_timer_node.cpp  timer_node.cpp
src/ros2_ws_c/src/tutorial_topic/: CMakeLists.txt  package.xml
src/ros2_ws_c/src/tutorial_topic/src/: move_publisher.cpp  wall_finder.cpp
src/turtlebot3_autorace/turtlebot3_autorace_detect/: setup.py
src/turtlebot3_autorace/turtlebot3_autorace_mission/: package.xml  setup.py
turtlebot3_autorace/turtlebot3_autorace_camera/launch/: intrinsic_camera_calibration.launch.py
turtlebot3_autorace/turtlebot3_autorace_camera/turtlebot3_autorace_camera/: image_projection.py
turtlebot3_autorace/turtlebot3_autorace_detect/: setup.py
turtlebot3_autorace/turtlebot3_autorace_detect/turtlebot3_autorace_detect/: detect_lane.py  detect_safezone_sign.py
turtlebot3_autorace/turtlebot3_autorace_mission/launch/: control_lane.launch.py  mission_construction.launch.py
turtlebot3_autorace/turtlebot3_autorace_mission/turtlebot3_autorace_mission/: control_lane.py
yolov8_rknn_detector/: package.xml  setup.cfg  setup.py
yolov8_rknn_detector/resource/: yolov8_rknn_detector
yolov8_rknn_detector/yolov8_rknn_detector/: __init__.py  detector_node.py  inference_core.py
(+459 files in other folders)
