<?xml version="1.0"?>
<package format="3">
  <name>yolov8_rknn_detector</name>
  <version>0.1.0</version>
  <description>ROS 2 node that runs RKNN YOLOv8 inference and publishes detections.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
