<?xml version="1.0"?>
<package format="3">
  <name>intel7_cam_sub</name>
  <version>0.0.1</version>
  <description>Subscriber for camera detections JSON</description>
  <maintainer email="you@example.com">maintainer</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
