<?xml version="1.0"?>
<package format="3">
  <name>ros2_client</name>
  <version>0.1.0</version>
  <description>ROS 2 TCP client that forwards traffic light messages from IoT server.</description>
  <maintainer email="user@example.com">autonomous-driving-project</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
